2002-10-23  Forgotten  <forgotten@users.sourceforge.net>

	* src\win32\Win32.cpp (initApp): remember freeze recent list flag

2002-10-22  Forgotten  <forgotten@users.sourceforge.net>
	
	* win32\.cvsignore: added output directories and MSVC files to ignore
	* src\win32\.cvsignore: Added vba.aps to ignore list	
	* src/TestEmu.cpp (systemPauseOnFrame): Added missing return statement
	* INSTALL: Updated GCC requirements
	* src/win32/Win32.cpp: added flag to freeze recent list
	* src/win32/vba.rc: added flag to freeze recent list
	* Initial Public Version
